--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "typescript.tsc.autoDetect": "off",
     "workbench.colorCustomizations": {
         "activityBar.background": "#1accff",
+        "activityBar.activeBackground": "#1accff",
         "activityBar.activeBorder": "#df00ad",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
