--- a/package.json
+++ b/package.json
@@ -80,6 +80,41 @@
 				"command": "operatorsdk.printdeps",
 				"title": "print deps",
 				"category": "Operator-sdk"
+			},
+			{
+				"command": "operatorsdk.migrate",
+				"title": "migrate",
+				"category": "Operator-sdk"
+			},
+			{
+				"command": "operatorsdk.cleanup",
+				"title": "cleanup",
+				"category": "Operator-sdk"
+			},
+			{
+				"command": "operatorsdk.bundle",
+				"title": "bundle",
+				"category": "Operator-sdk"
+			},
+			{
+				"command": "operatorsdk.build",
+				"title": "build",
+				"category": "Operator-sdk"
+			},
+			{
+				"command": "operatorsdk.test",
+				"title": "test",
+				"category": "Operator-sdk"
+			},
+			{
+				"command": "operatorsdk.olm",
+				"title": "olm",
+				"category": "Operator-sdk"
+			}
+			{
+				"command": "operatorsdk.scorecard",
+				"title": "scorecard",
+				"category": "Operator-sdk"
 			}
 		]
 	},
